--- a/MEI-Master/css/estilos_login.css
+++ b/MEI-Master/css/estilos_login.css
@@ -7,27 +7,13 @@
 }
 
 #body_login {
-    background-image: url("https://images.unsplash.com/photo-1471970394675-613138e45da3?auto=format&fit=crop&w=800&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-
-@media screen and (max-width: 1100px) {
-    #body_login {
-        background-size: auto;
-    }
+    background: url("https://images.unsplash.com/photo-1471970394675-613138e45da3?auto=format&fit=crop&w=800&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D")no-repeat center center fixed;
+    background-size: cover;
 }
 
 #body_singin {
-    background-image: url("https://images.unsplash.com/photo-1471970471555-19d4b113e9ed?auto=format&fit=crop&w=800&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-
-@media screen and (max-width: 1100px) {
-    #body_singin {
-        background-size: auto;
-    }
+    background: url("https://images.unsplash.com/photo-1471970471555-19d4b113e9ed?auto=format&fit=crop&w=800&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D")no-repeat center center fixed;
+    background-size: cover;
 }
 
 #card {
