--- a/MEI-Master/css/estilos_login.css
+++ b/MEI-Master/css/estilos_login.css
@@ -8,11 +8,17 @@
 
 #body_login {
     background: url("https://images.unsplash.com/photo-1471970394675-613138e45da3?auto=format&fit=crop&w=800&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D")no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
 
 #body_singin {
     background: url("https://images.unsplash.com/photo-1471970471555-19d4b113e9ed?auto=format&fit=crop&w=800&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D")no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
 
