--- a/MEIv3/app/src/main/res/layout-v21/content_sesion.xml
+++ b/MEIv3/app/src/main/res/layout-v21/content_sesion.xml
@@ -132,7 +132,8 @@
         android:id="@+id/InicioLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="56dp">
+        android:layout_marginTop="56dp"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
