--- a/MEIv3/app/src/main/res/layout/fragment_login.xml
+++ b/MEIv3/app/src/main/res/layout/fragment_login.xml
@@ -13,8 +13,8 @@
 
     <WebView
         android:id="@+id/webview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:visibility="gone" />
 
     <ScrollView
