--- a/MEIv3/app/src/main/res/layout/fragment_login.xml
+++ b/MEIv3/app/src/main/res/layout/fragment_login.xml
@@ -7,6 +7,7 @@
     android:background="@color/background"
     android:elevation="0dp"
     android:orientation="vertical"
+    android:visibility="gone"
     app:layout_collapseMode="parallax"
     tools:context="com.example.ramir.meiv3.LoginActivity">
 
