--- a/MEI-Master/css/estilos.css
+++ b/MEI-Master/css/estilos.css
@@ -22,6 +22,11 @@
 	width: 90%;
 }
 
+.carrera_img{
+	width: 100%;
+	height: auto;
+}
+
 .reco_foto{
 	min-height:11.3rem !important;
 	background-size: auto 100% !important;
