--- a/MEI-Master/css/estilos.css
+++ b/MEI-Master/css/estilos.css
@@ -28,13 +28,13 @@
 }
 
 .reco_foto{
-	min-height:11.3rem !important;
+	height:12.5rem !important;
 	background-size: auto 100% !important;
 }
 
 @media screen and (min-width: 300px) {
 	.reco_foto{
-		min-height:11.3rem !important;
+		min-height:12.5rem !important;
 		background-size: 100% auto !important;
 	}
 	#div_menu {
