--- a/MEIv3/app/src/main/res/layout-v21/content_sesion.xml
+++ b/MEIv3/app/src/main/res/layout-v21/content_sesion.xml
@@ -16,10 +16,27 @@
     </WebView>
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="72dp"
+        android:background="@android:color/white">
+
+        <ProgressBar
+            android:id="@+id/progressBar3"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/rl_resultado_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp"
+        android:background="@android:color/white"
         android:visibility="gone">
 
         <android.support.v7.widget.CardView
@@ -76,21 +93,6 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="56dp">
-
-        <ProgressBar
-            android:id="@+id/progressBar3"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="invisible" />
-
-    </RelativeLayout>
-
     <ScrollView
         android:id="@+id/sv_testvoca"
         android:layout_width="match_parent"
@@ -98,6 +100,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="56dp"
+        android:background="@android:color/white"
         android:visibility="gone">
 
         <LinearLayout
@@ -133,6 +136,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp"
+        android:background="@android:color/white"
         android:visibility="gone">
 
         <LinearLayout
@@ -294,6 +298,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp"
+        android:background="@android:color/white"
         android:visibility="gone">
 
         <LinearLayout
@@ -310,6 +315,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
+        android:background="@android:color/white"
         android:padding="0dp"
         android:visibility="gone">
 
@@ -327,6 +333,7 @@
         android:id="@+id/rl_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/white"
         android:visibility="gone">
 
         <TextView
@@ -354,6 +361,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:background="@android:color/white"
         android:visibility="gone">
 
         <ImageView
@@ -380,6 +388,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp"
+        android:background="@android:color/white"
         android:visibility="gone">
 
         <LinearLayout
@@ -531,6 +540,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp"
+        android:background="@android:color/white"
         android:visibility="gone">
 
         <LinearLayout
